--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./sass/style.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    <title>Back and Front Starter Pack</title>
+    <title>FastBlock</title>
 </head>
 <body>
     <div id="app">
